--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native": "^0.72.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.3",
     "babel-jest": "^29.2.1",
