--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-linear-gradient": "^2.8.3",
     "styled-components": "^6.0.8",
     "styled-components-react-native": "^1.0.0"
