--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.72.5",
     "react-native-animatable": "^1.3.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-snap-carousel": "^3.9.1",
     "styled-components": "^6.0.8",
     "styled-components-react-native": "^1.0.0"
   },
@@ -26,6 +27,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.72.3",
+    "@types/react-native-snap-carousel": "^3.8.6",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.3",
     "babel-jest": "^29.2.1",
