--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-animatable": "^1.3.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-snap-carousel": "^3.9.1",
+    "react-redux": "^8.1.3",
     "styled-components": "^6.0.8",
     "styled-components-react-native": "^1.0.0"
   },
