--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-animatable": "^1.3.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.27.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-redux": "^8.1.3",
     "styled-components": "^6.0.8",
