--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CoffeeProjectApp",
+  "name": "coffee_project_app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -40,10 +40,8 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components-react-native": "^5.2.3",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "^4.8.4"
   },
