--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/react-native": "^12.4.0",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.10",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.72.3",
     "@types/react-native-snap-carousel": "^3.8.6",
