--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.6.4",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.5",
     "deprecated-react-native-prop-types": "^5.0.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
